--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Note Taking and To-Do App",
     "main": "app.js",
     "scripts": {
-        "watch": "nodemon ./app.js"
+        "start": "nodemon ./app.js"
     },
     "author": "cpustejovsky",
     "license": "MIT",
