--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
