--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "lodash": "^4.17.14",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
