--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
+    "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
