updated readme to reflect how to start this app on your local machine changeed that command to local instead of start-test for ease of use better formatting for notes email clearer copy for email button on notes page added source code to footer

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "nodemon --exec 'mocha test --recursive'",
-    "start-test": "nodemon app.js test",
+    "local": "nodemon app.js test",
     "start": "node app.js"
   },
   "engines": {
