--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
     "connect-flash": "^0.1.1",
+    "cron": "^1.7.2",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
