--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
+    "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
