--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.2",
     "lodash": "^4.17.14",
+    "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
