--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "cpustejovsky",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
     "connect-flash": "^0.1.1",
@@ -22,6 +23,7 @@
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.14",
     "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
