--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "concurrently": "^5.1.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
-    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.16.2",
@@ -33,13 +32,11 @@
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.5",
-    "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "request": "^2.88.0",
-    "serve-favicon": "^2.5.0"
+    "request": "^2.88.0"
   }
 }
