--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "client-sessions": "^0.8.0",
     "concurrently": "^5.1.0",
     "connect-flash": "^0.1.1",
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
@@ -35,7 +35,7 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0"
   }
