--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0"
