--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "http-proxy-middleware": "^1.0.3",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.13.1",
