--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "author": "cpustejovsky",
   "license": "MIT",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/pickers": "^3.2.10",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.4.0",
+    "date-fns": "^2.13.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
     "lodash": "^4.17.14",
