--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^5.1.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.4.0",
+    "cpustejovsky-dyno-waker": "^1.0.1",
     "date-fns": "^2.13.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
