--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.13.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
+    "googleapis": "^39.2.0",
     "lodash": "^4.17.14",
     "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
