--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/pickers": "^3.2.10",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "concurrently": "^5.1.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.4.0",
@@ -39,7 +41,6 @@
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0",
-    "supertest": "^4.0.2"
+    "passport-google-oauth20": "^2.0.0"
   }
 }
