--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-stub": "^1.1.1"
   }
 }
