--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "test": "NODE_ENV=test nodemon --exec 'mocha test --recursive' --reporter=nyan",
+    "test": "NODE_ENV=test nodemon --exec 'mocha test --recursive'",
     "start": "node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
