--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport": "^0.4.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "passport-stub": "^1.1.1"
+    "passport-stub": "^1.1.1",
+    "sinon": "^9.0.2"
   }
 }
