--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-stub": "^1.1.1",
+    "puppeteer": "^3.3.0",
     "sinon": "^9.0.2"
   },
   "devDependencies": {
