--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-stub": "^1.1.1",
     "puppeteer": "^3.3.0",
+    "puppeteer-extra": "^3.1.9",
+    "puppeteer-extra-plugin-stealth": "^2.4.9",
     "sinon": "^9.0.2"
   },
   "devDependencies": {
