--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "npm": "6.13.4"
   },
   "scripts": {
+    "test": "NODE_ENV=test nodemon --exec 'nyc mocha test --recursive'",
     "unit": "NODE_ENV=test nodemon --exec 'nyc mocha test/unit --recursive'",
+    "integration": "NODE_ENV=test nyc mocha test/integration --recursive",
     "start": "node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
