removing istanbul from integration and unit test so it will just account for coverage of both when I run npm run test

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "NODE_ENV=test nodemon --exec 'nyc mocha test --recursive'",
-    "unit": "NODE_ENV=test nodemon --exec 'nyc mocha test/unit --recursive'",
-    "integration": "NODE_ENV=test nodemon --exec 'nyc mocha test/integration --recursive'",
+    "unit": "NODE_ENV=test nodemon --exec 'mocha test/unit --recursive'",
+    "integration": "NODE_ENV=test nodemon --exec 'mocha test/integration --recursive'",
     "start": "node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
