--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.4.0",
     "cpustejovsky-dyno-waker": "^1.0.4",
+    "cron": "^1.8.2",
     "date-fns": "^2.13.0",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
