installing react-beautiful-dnd

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "http-proxy-middleware": "^1.0.3",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-mailchimp-subscribe": "^2.1.0",
