--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.19.2",
     "formik": "^2.1.4",
     "http-proxy-middleware": "^1.0.3",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
@@ -19,7 +19,7 @@
     "react-mailchimp-subscribe": "^2.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.5",
     "redux-thunk": "^2.3.0"
